+ Implemented resource loading + Start up functionality
> Redesigned debugger system